# LibLaura

./: .examples.swp  .include.swp  AUTHORS  CMakeLists.txt  NEWS.md  README.md
cmake/: FindFFTW.cmake  FindRtAudio.cmake
doc/: doxyfile.cfg
examples/: .localization_from_device.cpp.swp  .localization_from_file.cpp.swp  CMakeLists.txt  Makefile  cmake_install.cmake  localization_from_device.cpp  localization_from_file.cpp
examples/GUI/: CMakeLists.txt  Makefile  cmake_install.cmake  moc_qcustomplot.cpp  moc_sourceanalyzergui.cpp
examples/GUI/src/: main.cpp  sourceanalyzergui.cpp  sourceanalyzergui.h  sourceanalyzergui.ui
examples/GUI/src/plot/: circleplot.cpp  circleplot.h  correlationplot.cpp  correlationplot.h  dynamicplot.cpp  dynamicplot.h  plot.cpp  plot.h  spectrumplot.cpp  spectrumplot.h
examples/sounds/: electric razor.flac  rattle.flac  shift -318 us.flac
include/: .laura.h.swp  .lauralogger.h.swp  .lauramessenger.h.swp  .lauratypes.h.swp  audiocallback.h  callbackresult.h  laura.h  lauraaudio.h  laurabackend.h  lauracallback.h  lauraestimator.h  laurafft.h  laurafftw.h  lauralogger.h  lauramessenger.h  lauratdoa.h  laurathread.h  lauratypes.h
modules/: crosscorr.h  dummy.h  gccphat.h
src/: callbackresult.cpp  laura.cpp  lauraaudio.cpp  laurabackend.cpp  lauraestimator.cpp  lauralogger.cpp  lauramessenger.cpp  lauratdoa.cpp  laurathread.cpp
